resolvendo erros nas demos

--- a/theme/templates/components/calendar.html
+++ b/theme/templates/components/calendar.html
@@ -205,7 +205,7 @@ include "components/calendar.html" with
             return highlight ? highlight.type : '';
         }
     }"
-    class="bg-background p-3 w-fit border border-border rounded-lg {{ class|default:'' }}"
+    class="inline-block bg-background p-3 w-fit border border-border rounded-lg {{ class|default:'' }}"
 >
     <!-- Header -->
     <div class="flex items-center justify-between mb-4">
