--- a/theme/templates/components/table.html
+++ b/theme/templates/components/table.html
@@ -58,7 +58,7 @@ Parâmetros:
         }"
     {% endif %}
     {% if x_data %}x-data="{{ x_data }}"{% endif %}
-    class="relative w-full overflow-x-auto {{ class|default:'' }}"
+    class="w-full {{ class|default:'' }}"
 >
     <table class="w-full caption-bottom text-sm">
         {% if caption %}
